--- a/index.html
+++ b/index.html
@@ -5,28 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sticky</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <div class="wrapper">
 
-
-        <header>
-            HEADER
-        </header>
-
-
-        <main>
-            MAIN
-        </main>
-        
-
-
-       <footer>
-            FOOTER
-       </footer>
-
-    </div>
+    <div class="wrapper"></div>
 
 </body>
 </html>
