--- a/index.html
+++ b/index.html
@@ -6,10 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sticky</title>
     <link rel="stylesheet" href="./css/style.css">
+    <script src="https://kit.fontawesome.com/bb7f86ceb6.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
-    <div class="wrapper"></div>
+    <div class="wrapper">
+
+        <!-- <div class="center"></div> -->
+        <div class="center_in">
+            <div class="text_and_icon">
+                <i class="fa-solid fa-utensils"></i>    
+                <div class="text">ohmyfood</div>
+            </div>
+        </div>
+        
+    </div>
 
 </body>
 </html>
